--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,144 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+.content {
+  min-height: calc(100vh - 70px - 44px);
+}
+.page-footer {
+  padding-top: 0;
+}
+.loading {
+  height: calc(100vh - 70px - 44px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body.colorlib-body {
+  padding: 0;
+  margin: 0;
+}
+.not-found {
+  height: calc(100vh - 70px - 44px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#colorlib-notfound {
+  position: relative;
+  height: 60vh;
+  background: #f6f6f6;
+}
+
+.colorlib-body #colorlib-notfound {
+  height: 100vh;
+}
+
+#colorlib-notfound .colorlib-notfound {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.colorlib-notfound {
+  max-width: 767px;
+  width: 100%;
+  line-height: 1.4;
+  padding: 110px 40px;
+  text-align: center;
+}
+
+.colorlib-notfound .colorlib-notfound-404 {
+  position: relative;
+  height: 180px;
+}
+
+.colorlib-notfound .colorlib-notfound-404 h1 {
+  font-family: "Roboto", sans-serif;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-size: 165px;
+  font-weight: 700;
+  margin: 0px;
+  color: #262626;
+  text-transform: uppercase;
+}
+
+.colorlib-notfound .colorlib-notfound-404 h1:before,
+.colorlib-notfound .colorlib-notfound-404 h1:after {
+  display: none;
+}
+
+.colorlib-notfound .colorlib-notfound-404 h1 > span {
+  color: #00b7ff;
+}
+
+.colorlib-notfound h2 {
+  font-family: "Roboto", sans-serif;
+  font-size: 22px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #151515;
+  margin-top: 0px;
+  margin-bottom: 25px;
+}
+.products {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1rem;
+}
+.card-action {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+}
+.card-content {
+  flex-grow: 1;
+}
+.cart{
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  cursor: pointer;
+  z-index: 5;
+  padding: 1rem;
+}
+@media only screen and (max-width: 767px) {
+  .colorlib-notfound h2 {
+    font-size: 18px;
+  }
+  .cart{
+    top: 5rem;
+    bottom:unset;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .colorlib-notfound .colorlib-notfound-404 h1 {
+    font-size: 141px;
+  }
+}
+
+@media only screen and (max-height: 600px) {
+  #colorlib-notfound {
+    height: 100vh;
+  }
 }
