--- a/src/index.css
+++ b/src/index.css
@@ -1,144 +1,204 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
 .content {
-  min-height: calc(100vh - 70px - 44px);
+    min-height: calc(100vh - 70px - 44px);
 }
+
 .page-footer {
-  padding-top: 0;
+    padding-top: 0;
 }
+
 .loading {
-  height: calc(100vh - 70px - 44px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    height: calc(100vh - 70px - 44px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 * {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body.colorlib-body {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
+
 .not-found {
-  height: calc(100vh - 70px - 44px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    height: calc(100vh - 70px - 44px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #colorlib-notfound {
-  position: relative;
-  height: 60vh;
-  background: #f6f6f6;
+    position: relative;
+    height: 60vh;
+    background: #f6f6f6;
 }
 
 .colorlib-body #colorlib-notfound {
-  height: 100vh;
+    height: 100vh;
 }
 
 #colorlib-notfound .colorlib-notfound {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 .colorlib-notfound {
-  max-width: 767px;
-  width: 100%;
-  line-height: 1.4;
-  padding: 110px 40px;
-  text-align: center;
+    max-width: 767px;
+    width: 100%;
+    line-height: 1.4;
+    padding: 110px 40px;
+    text-align: center;
 }
 
 .colorlib-notfound .colorlib-notfound-404 {
-  position: relative;
-  height: 180px;
+    position: relative;
+    height: 180px;
 }
 
 .colorlib-notfound .colorlib-notfound-404 h1 {
-  font-family: "Roboto", sans-serif;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  font-size: 165px;
-  font-weight: 700;
-  margin: 0px;
-  color: #262626;
-  text-transform: uppercase;
+    font-family: "Roboto", sans-serif;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    font-size: 165px;
+    font-weight: 700;
+    margin: 0px;
+    color: #262626;
+    text-transform: uppercase;
 }
 
 .colorlib-notfound .colorlib-notfound-404 h1:before,
 .colorlib-notfound .colorlib-notfound-404 h1:after {
-  display: none;
+    display: none;
 }
 
 .colorlib-notfound .colorlib-notfound-404 h1 > span {
-  color: #00b7ff;
+    color: #00b7ff;
 }
 
 .colorlib-notfound h2 {
-  font-family: "Roboto", sans-serif;
-  font-size: 22px;
-  font-weight: 400;
-  text-transform: uppercase;
-  color: #151515;
-  margin-top: 0px;
-  margin-bottom: 25px;
+    font-family: "Roboto", sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #151515;
+    margin-top: 0px;
+    margin-bottom: 25px;
 }
+
 .products {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 1rem;
 }
+
 .card-action {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
 .card {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
+
 .card-content {
-  flex-grow: 1;
+    flex-grow: 1;
 }
-.cart{
-  position: fixed;
-  bottom: 2rem;
-  right: 2rem;
-  cursor: pointer;
-  z-index: 5;
-  padding: 1rem;
+
+.cart {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    cursor: pointer;
+    z-index: 5;
+    padding: 1rem;
 }
+.cart_list{
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0, 0, 0, .5);
+}
+
+.basket-list {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    width: 50rem;
+    max-width: 95%;
+    box-shadow: 0 6px 15px 0 rgba(0, 0, 0, 0.5);
+    transition: 1s;
+    animation: modal-show .5s ease-in-out;
+}
+
+.collection {
+    margin: 0;
+}
+
+.basket-close {
+    cursor: pointer;
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    color: #ffffff;
+}
+.delete-item{
+    cursor: pointer;
+    color: #03a9f4;
+}
+
+
+@keyframes modal-show {
+    from{
+        top: 70%;
+        opacity: 0;
+    }
+    to{
+        top: 50%;
+        opacity: 1;
+    }
+}
+
 @media only screen and (max-width: 767px) {
-  .colorlib-notfound h2 {
-    font-size: 18px;
-  }
-  .cart{
-    top: 5rem;
-    bottom:unset;
-  }
+    .colorlib-notfound h2 {
+        font-size: 18px;
+    }
+
+    .cart {
+        top: 5rem;
+        bottom: unset;
+    }
 }
 
 @media only screen and (max-width: 480px) {
-  .colorlib-notfound .colorlib-notfound-404 h1 {
-    font-size: 141px;
-  }
+    .colorlib-notfound .colorlib-notfound-404 h1 {
+        font-size: 141px;
+    }
 }
 
 @media only screen and (max-height: 600px) {
-  #colorlib-notfound {
-    height: 100vh;
-  }
+    #colorlib-notfound {
+        height: 100vh;
+    }
 }
